--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,31 @@
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.13
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.8.0
+attrs==25.1.0
+Authlib==1.4.1
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
-fastapi==0.115.10
+cryptography==44.0.0
+fastapi==0.115.8
+frozenlist==1.5.0
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
+multidict==6.1.0
+propcache==0.3.0
+psycopg2-binary==2.9.10
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 requests==2.32.3
 sniffio==1.3.1
-starlette==0.46.0
+SQLAlchemy==2.0.37
+starlette==0.45.3
 typing_extensions==4.12.2
 urllib3==2.3.0
-uvicorn==0.34.0
+yarl==1.18.3
