--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,13 +10,16 @@ cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.0
+distro==1.9.0
 fastapi==0.115.8
 frozenlist==1.5.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+jiter==0.8.2
 multidict==6.1.0
+openai==1.65.2
 propcache==0.3.0
 psycopg2-binary==2.9.10
 pycparser==2.22
@@ -26,6 +29,8 @@ requests==2.32.3
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.45.3
+tqdm==4.67.1
 typing_extensions==4.12.2
 urllib3==2.3.0
+uvicorn==0.34.0
 yarl==1.18.3
