--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 aiohappyeyeballs==2.4.6
 aiohttp==3.11.13
 aiosignal==1.3.2
+aiosqlite==0.21.0
 annotated-types==0.7.0
 anyio==4.8.0
 attrs==25.1.0
@@ -11,6 +12,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.0
 distro==1.9.0
+dotenv==0.9.9
 fastapi==0.115.8
 frozenlist==1.5.0
 h11==0.14.0
@@ -25,6 +27,7 @@ psycopg2-binary==2.9.10
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
+python-dotenv==1.0.1
 requests==2.32.3
 sniffio==1.3.1
 SQLAlchemy==2.0.37
