added more tools still need to debug the web scrapper one

--- a/backend/app/config/agents.yaml
+++ b/backend/app/config/agents.yaml
@@ -3,7 +3,7 @@ researcher:
     {company} {job} Researcher
   goal: >
     Gather detailed and current information about {company} and the {job} role,
-    including market trends, company culture, financial data, and job requirements.
+    including market trends, company culture, financial data, and job requirements. Use the tools provides: webscrapper (input urls) and search engine.
   backstory: >
     You are a seasoned researcher with expertise in evaluating companies and analyzing job market trends.
     Your task is to extract the most relevant data about {company} and the specific {job} role,
