finishing on application rescheived flow

--- a/backend/app/config/tasks.yaml
+++ b/backend/app/config/tasks.yaml
@@ -1,6 +1,7 @@
 research_task:
   description: >
     Conduct thorough research on {company} and the {job} role.
+    A SUMMARY HAS ALREADY BEEN PROVIDED: {summary}
     Collect detailed information including:
     - Company Overview and Name
     - Company Mission and Vision (including strategic goals)
