--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -19,7 +19,7 @@
         "default_title": "Job Hunter"
     },
     "oauth2": {
-        "client_id": "285496474323-bdblk51g4kn6ula3ovaubcnvlpd94ktc.apps.googleusercontent.com",
+        "client_id": "",
         "scopes": ["https://www.googleapis.com/auth/gmail.readonly", "https://www.googleapis.com/auth/userinfo.email", "https://www.googleapis.com/auth/drive.file"]
     }
 }
