--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -57,6 +57,7 @@ google-crc32c==1.6.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.68.0
 gptcache==0.1.44
+greenlet==3.1.1
 grpc-google-iam-v1==0.14.0
 grpcio==1.70.0
 grpcio-status==1.70.0
@@ -112,10 +113,12 @@ monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
+nest-asyncio==1.6.0
 networkx==3.4.2
 nodeenv==1.9.1
 numpy==2.2.3
 oauthlib==3.2.2
+ollama==0.4.7
 onnxruntime==1.20.1
 openai==1.65.2
 openpyxl==3.1.5
@@ -131,6 +134,7 @@ opentelemetry-sdk==1.30.0
 opentelemetry-semantic-conventions==0.51b0
 opentelemetry-util-http==0.51b0
 orjson==3.10.15
+outcome==1.3.0.post0
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -139,6 +143,7 @@ pdfminer.six==20231228
 pdfplumber==0.11.5
 pexpect==4.9.0
 pillow==11.1.0
+playwright==1.50.0
 portalocker==2.10.1
 posthog==3.18.0
 primp==0.14.0
@@ -156,7 +161,7 @@ pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.8.1
 pydantic_core==2.27.2
-python-dotenv==1.0.1
+pyee==12.1.1
 Pygments==2.19.1
 PyJWT==2.10.1
 pylance==0.23.2
@@ -166,6 +171,7 @@ PyPika==0.48.9
 pyproject_hooks==1.2.0
 pyright==1.1.395
 pysbd==0.3.4
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytube==15.0.0
@@ -182,11 +188,13 @@ rich==13.9.4
 rpds-py==0.23.1
 rsa==4.9
 schema==0.7.7
+selenium==4.29.0
 setuptools==75.8.2
 shapely==2.0.7
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.6
 SQLAlchemy==2.0.37
 stack-data==0.6.3
@@ -200,6 +208,8 @@ tomli==2.2.1
 tomli_w==1.2.0
 tqdm==4.67.1
 traitlets==5.14.3
+trio==0.29.0
+trio-websocket==0.12.2
 typer==0.15.2
 types-requests==2.32.0.20250301
 typing-inspect==0.9.0
@@ -214,5 +224,6 @@ wcwidth==0.2.13
 websocket-client==1.8.0
 websockets==15.0
 wrapt==1.17.2
+wsproto==1.2.0
 yarl==1.18.3
 zipp==3.21.0
