--- a/chrome_extension/package.json
+++ b/chrome_extension/package.json
@@ -47,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.308",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
