--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -93,6 +93,7 @@ jaraco.functools==4.1.0
 jedi==0.19.2
 Jinja2==3.1.5
 jiter==0.8.2
+joblib==1.4.2
 json5==0.10.0
 json_repair==0.39.1
 jsonpatch==1.33
@@ -105,6 +106,7 @@ keyring==25.6.0
 kubernetes==32.0.1
 lancedb==0.20.0
 langchain==0.3.19
+langchain-chroma==0.2.2
 langchain-cohere==0.3.5
 langchain-community==0.3.18
 langchain-core==0.3.40
@@ -131,7 +133,7 @@ mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 nodeenv==1.9.1
-numpy==2.2.3
+numpy==1.26.4
 oauthlib==3.2.2
 ollama==0.4.7
 onnxruntime==1.20.1
@@ -207,8 +209,12 @@ requests-toolbelt==1.0.0
 rich==13.9.4
 rpds-py==0.23.1
 rsa==4.9
+safetensors==0.5.3
 schema==0.7.7
+scikit-learn==1.6.1
+scipy==1.15.2
 selenium==4.29.0
+sentence-transformers==3.4.1
 setuptools==75.8.2
 shapely==2.0.7
 shellingham==1.5.4
@@ -219,16 +225,19 @@ soupsieve==2.6
 SQLAlchemy==2.0.37
 stack-data==0.6.3
 starlette==0.45.3
-sympy==1.13.3
+sympy==1.13.1
 tabulate==0.9.0
 tenacity==9.0.0
+threadpoolctl==3.6.0
 tiktoken==0.7.0
-tokenizers==0.20.3
+tokenizers==0.21.1
 tomli==2.2.1
 tomli_w==1.2.0
 tomlkit==0.13.2
+torch==2.6.0
 tqdm==4.67.1
 traitlets==5.14.3
+transformers==4.50.0
 trio==0.29.0
 trio-websocket==0.12.2
 trove-classifiers==2025.3.3.18
